<resources>
    <string name="app_name">Day1MDB</string>
    <string name="loginTitle">Login Karyawan</string>
    <string name="loginPass">Password</string>
    <string name="loginName">Username</string>
    <string name="loginButton">LOGIN</string>
    <string name="fPassword"><u>FORGOT PASSWORD</u></string>
    <string name="title_activity_forgot_pass">Forgot Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
