<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo_display"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTitle"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorRed"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginName"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="@color/colorBlue"
        />
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="Input Username"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginPass"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="@color/colorBlue"
        />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="Input Password"
        android:inputType="numberPassword"
        android:maxLength="4"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:layout_marginTop="12dp"
        />
    <TextView
        android:id="@+id/fPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fPassword"
        android:layout_marginTop="18dp"
        android:textColor="@color/colorBlue"
        android:textStyle="bold"
        />
</LinearLayout>